# epc_ciot

./: .gitignore  build.sh  main.cc  meson.build  version.h
asn1/: asn1_utils.cc  asn1_utils.h  gtpc.cc  gtpc.h  gtpc_ies.h  gtpc_msg.h  liblte_common.cc  liblte_mme.cc  meson.build  s1ap_asn1.cc
common/: arch_select.cc  backtrace.h  buffer_pool.cc  buffer_pool.h  common.h  config_file.h  crash_handler.c  crash_handler.h  gen_mch_tables.c  liblte_security.cc  liblte_security.h  log_filter.cc  log_filter.h  logger_file.cc  logger_file.h  logger_stdout.h  logmap.cc  logmap.h  meson.build  pcap.c  s1ap_pcap.cc  s1ap_pcap.h  security.cc  security.h  signal_handler.h  snow_3g.cc  thread_pool.cc  threads.c  timestamp.h  zuc.cc
common/test/: thread_pool_test.cc  thread_test.cc
gtpu/: gtpu.cc  gtpu.h  meson.build
hss/: hss.cc  hss.h  meson.build
interfaces/: epc_interfaces.h
io/: netsource.h
mbms-gw/: main.cc  mbms-gw.cc  mbms-gw.h
mme/: meson.build  mme.cc  mme.h  mme_gtpc.cc  mme_gtpc.h  nas.cc  nas.h  s11u_ep.cc  s11u_ep.h  s1ap.cc  s1ap.h  s1ap_common.h  s1ap_ctx_mngmt_proc.cc  s1ap_ctx_mngmt_proc.h  s1ap_mngmt_proc.cc  s1ap_mngmt_proc.h  s1ap_nas_transport.cc  s1ap_nas_transport.h  s1ap_paging.cc  s1ap_paging.h
scripts/: aarch64.cmake  arm64_armv8_linux_gcc  cross_compile.env  x86.cmake
spgw/: gtpc.cc  gtpc.h  gtpu.cc  gtpu.h  meson.build  spgw.cc  spgw.h
